# opca

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  opca.py  pyproject.toml  test.sh
.github/workflows/: build.yml
notification/: aws_lambda.py  aws_lambda_test.py  environment.sh.example
opca_lib/: alerts.py  ca.py  certificate_bundle.py  colour.py  command_ca.py  command_crl.py  command_database.py  command_manage.py  command_openvpn.py  crypto.py  database.py  date.py  fs_io.py  op.py
python/: hosts.txt.example  pyproject.toml  pytest.ini
python/src/opca/: __init__.py  cli.py  constants.py
python/src/opca/commands/: __init__.py  helpers.py
python/src/opca/models/: __init__.py  app.py
python/src/opca/services/: backup.py  ca.py  cert.py  command_queue.py  database.py  op_errors.py  storage.py  vault.py  vault_lock.py
python/src/opca/tui/: app.py  clipboard.py  context.py  styles.py
python/src/opca/utils/: cli_ui.py  crypto.py  files.py  formatting.py
python/tests/e2e/: conftest.py  test_10_ca.py  test_20_certs.py  test_60_tui.py
python/tests/unit/: README.md  test_database.py  test_tui.py  test_vault_lock.py
rust/: Cargo.toml  package-lock.json  package.json
rust/crates/opca-cli/: Cargo.toml
rust/crates/opca-cli/src/: app.rs  main.rs  output.rs
rust/crates/opca-cli/src/commands/: ca.rs  cert.rs  crl.rs  csr.rs  database.rs  dkim.rs  mod.rs  openvpn.rs  vault.rs
rust/crates/opca-cli/tests/: e2e.rs
rust/crates/opca-core/: Cargo.toml
rust/crates/opca-core/src/: constants.rs  error.rs  lib.rs  op.rs  testutil.rs  vault_lock.rs
rust/crates/opca-core/src/crypto/: utils.rs
rust/crates/opca-core/src/services/: backup.rs  ca.rs  cert.rs  command_queue.rs  mod.rs  route53.rs  vault.rs
rust/crates/opca-core/src/services/database/: iterdump.rs  mod.rs  models.rs  schema.rs  tests.rs
rust/crates/opca-core/src/services/storage/: mod.rs  rsync.rs  s3.rs
rust/crates/opca-core/src/utils/: datetime.rs  files.rs  mod.rs
rust/crates/opca-core/tests/: e2e.rs  op_integration.rs
rust/crates/opca-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
rust/crates/opca-tauri/capabilities/: default.json
rust/crates/opca-tauri/icons/: icon.icns
rust/crates/opca-tauri/src/: main.rs  state.rs
rust/crates/opca-tauri/src/commands/: ca.rs  cert.rs  connect.rs  crl.rs  csr.rs  dashboard.rs  database.rs  dkim.rs  dto.rs  files.rs  lock.rs  mod.rs  openvpn.rs  update.rs  vault.rs
rust/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rust/frontend/src/: App.tsx  index.tsx  router.ts
rust/frontend/src/api/: ca.ts  certs.ts  crl.ts  csr.ts  dashboard.ts  database.ts  dkim.ts  openvpn.ts  tauri.ts  types.ts  update.ts  (+2 more)
rust/scripts/: bump-version.js  generate-icons.sh  release.js
src/opca/: __init__.py  __main__.py  constants.py
src/opca/commands/: __init__.py
src/opca/models/: app.py
src/opca/reports/: ca_list.py
src/opca/services/: ca.py  ca_errors.py  cert.py  database.py  one_password.py  route53.py  storage.py  vault.py
src/opca/tui/: __init__.py  app.py  context.py  mixins.py  workers.py
src/opca/utils/: crypto.py  datetime.py  files.py
tests/e2e/: helpers.py  test_30_crl.py  test_40_openvpn.py
tests/unit/: __init__.py  test_backup.py  test_database.py  test_datetime.py  test_dkim.py  test_files.py  test_vault_service.py
(+101 files in other folders)
