[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opca"
version = "0.99.0"
description = "1Password Certificate Authority tooling: generate keys/CSRs/certs and store in 1Password."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alex Ferrara", email = "alex@wiredsquare.com" }]
keywords = ["x509", "certificate", "cryptography", "pki", "1password"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]

dependencies = [
  "cryptography>=46.0.3",
]

# Optional/extra features (installed via: pip install opca[s3])
[project.optional-dependencies]
s3 = ["boto3>=1.26"]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "build",
  "twine"
]

[project.urls]
Homepage = "https://github.com/Wired-Square/opca"
Issues = "https://github.com/Wired-Square/opca/issues"

[project.scripts]
opca = "opca.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["opca*"]
exclude = ["tests*", "test*"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.package-data]
opca = ["storage/**", "py.typed"]